nginx-example-fixme/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-example-fixme
spec:
  selector:
    app: nginx-example-fixmy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
