nginx-example-fixme/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx-example
spec:
  to:
    kind: Service
    name: nginx-example
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
